# gen-card-numb

./: .flake8  .gitignore  GenCardNumb.spec  README.md  pyproject.toml  requirements.txt
assets/: README.md
src/: card_gui.py  config.py  luhn.py  main.py
tests/: test_config.py  test_luhn.py
tools/: build_exe.py  generate_icons.py
